added background task implementation

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.phone_shake">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
+        tools:replace="android:label"
         android:label="phone_shake"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -22,6 +24,7 @@
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
+               android:value="2"
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
